@@ -1595,18 +1595,6 @@ config_file_parse (const char *filename,
         &common_cmd_args_config,
         0,
       },
-      /* timeout maintained for backwards compatability */
-      {
-        "timeout",
-        CONFFILE_OPTION_INT,
-        -1,
-        _config_file_positive_unsigned_int,
-        1,
-        0,
-        &session_timeout_count,
-        &(common_args->session_timeout),
-        0
-      },
       {
         "session-timeout",
         CONFFILE_OPTION_INT,
@@ -1616,18 +1604,6 @@ config_file_parse (const char *filename,
         0,
         &session_timeout_count,
         &(common_args->session_timeout),
-        0
-      },
-      /* retry-timeout maintained for backwards compatability */
-      {
-        "retry-timeout",
-        CONFFILE_OPTION_INT,
-        -1,
-        _config_file_positive_unsigned_int,
-        1,
-        0,
-        &retransmission_timeout_count,
-        &(common_args->retransmission_timeout),
         0
       },
       {
@@ -1652,18 +1628,6 @@ config_file_parse (const char *filename,
         &common_cmd_args_config,
         0,
       },
-      /* cipher_suite_id (underscored) maintained for backwards compatability */
-      {
-        "cipher_suite_id",
-        CONFFILE_OPTION_INT,
-        -1,
-        _config_file_cipher_suite_id,
-        1,
-        0,
-        &cipher_suite_id_count,
-        &common_cmd_args_config,
-        0,
-      },
       {
         "cipher-suite-id",
         CONFFILE_OPTION_INT,
@@ -1672,18 +1636,6 @@ config_file_parse (const char *filename,
         1,
         0,
         &cipher_suite_id_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* privilege maintained for backwards compatability */
-      {
-        "privilege",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_privilege_level,
-        1,
-        0,
-        &privilege_level_count,
         &common_cmd_args_config,
         0,
       },
